--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Temorary Home Page</title>
+    <title>Dry Oar Boating</title
     </head>
     <body>
-        <h1>Jahunt05.Github.io</h1>
-        <p>This is a temporary home page served from a Github repository.</p>
+        <h1>Dry Oar Boating</h1>
+        <img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Dry Oar Boating logo" width="110">
+        <ul> 
+            <li>Home</li>
+            <li>Rivers</li>
+            <li>FAQ</li>
+            <li>Blog</li>
+            <li>Rates/Dates</li>
+            <li>Contact Us</li>
+        </ul>
+        <img src="http://brothert.net/dryoar/images/river-wide2.JPG" alt="River banner" width="940">
+        <h1>We Run Rivers To Relax</h1>
+        <p>We believe that there is nothing like a river trip for relaxing. That is why we subscribe to the dry oar philosophy of boating. Keeping your oars dry for us means taking time to look around and notice the beauty that surrounds the rivers we love.</p>
+        <img src="http://brothert.net/dryoar/images/river-portrait.jpg" alt="Canyon River picture" width="300">
+        <img src="http://brothert.net/dryoar/images/raft-rapid.jpg" alt="White River Rafting picture" width="400">
+        <h1>We Run Whitewater For The Rush!</h1>
+        <p>That doesn't mean we don't also like rapids. Opposites in all things after all. We believe that that tenseness that comes when you are looking down the tongue of a big string of waves makes you appreciate the calm beautiful water that always follows even more.</p>
+        <h1>Come Visit Us!</h1>
+        <p>We invite you to come relax with us on one of the amazing rivers we visit. Check out our trips and let us know which one best suits you. We're waiting to hear from you!</p>
+        <p>&copy; 2016 Dry Oar || Joshua Hunt <p>
+        
     </body>
 </html>
