--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul> 
             <li><a href="index.html">Home</a></li>
             <li><a href="rivers.html">Rivers</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">FAQ</a></li>
-            <li><a href="index.html">Blog</a></li>
             <li><a href="index.html">Rates/Dates</a></li>
             <li><a href="index.html">Contact Us</a></li>
         </ul>
