Tab Icons Added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-
+    
+    <link rel="icon" href="dryoarlogo.png">
+    
     <link rel="stylesheet" type="text/css" href="Style.css">
   
     <meta charset="utf-8">
