--- a/rivers.html
+++ b/rivers.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+    
+    <link rel="icon" href="dryoarlogo.png">
 
     <link rel="stylesheet" type="text/css" href="Style.css">
   
